Configuration management and different profiles added

--- a/cards/pom.xml
+++ b/cards/pom.xml
@@ -13,7 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>cards</name>
-	<description>Micorservice for Cards</description>
+	<description>Microservice for Cards</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -103,8 +103,14 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<to>
+						<image>disha395/${project.artifactId}:s6</image>
+					</to>
+				</configuration>
 			</plugin>
 
 			<plugin>
@@ -121,16 +127,6 @@
 				</configuration>
 			</plugin>
 
-			<plugin>
-				<groupId>com.google.cloud.tools</groupId>
-				<artifactId>jib-maven-plugin</artifactId>
-				<version>3.5.1</version>
-				<configuration>
-					<to>
-						<image>disha395/cards:s4</image>
-					</to>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 
