--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -14,3 +14,23 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  config:
+    import:
+      - "application_qa.yml"
+      - "application_prod.yml"
+  profiles:
+    active:
+      - "qa"
+
+build:
+  version: "3.0"
+
+accounts:
+  message: "Welcome to accounts related local APIs"
+  contactDetails:
+    name: "Disha Nayak - Developer"
+    email: "dishanayak395@gmail.com"
+  onCallSupport:
+    - (555) 555-1234
+    - (555) 523-1345
+
