--- a/loans/pom.xml
+++ b/loans/pom.xml
@@ -104,13 +104,13 @@
 		<plugins>
 
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.5.1</version>
 				<configuration>
-					<image>
-						<name>disha395/${project.artifactId}:s4</name>
-
-					</image>
+					<to>
+						<image>disha395/${project.artifactId}:s6</image>
+					</to>
 				</configuration>
 			</plugin>
 
