--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
         git:
           uri: "https://github.com/Disha395/config-files.git"
           username: Disha395
-          password: ${GIT_TOKEN}
+          password: ${SPRING_CLOUD_CONFIG_SERVER_GIT_PASSWORD}
           default-label: main
           timeout: 5
           clone-on-start: true
