--- a/docker-compose/default/docker-compose.yml
+++ b/docker-compose/default/docker-compose.yml
@@ -1,4 +1,38 @@
 services:
+  accountsdb:
+    image: mysql
+    container_name: accountsdb
+    ports:
+      - 3308:3306
+    environment:
+      MYSQL_DATABASE: accountsdb
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
+  loansdb:
+    container_name: loansdb
+    ports:
+      - 3309:3306
+    environment:
+      MYSQL_DATABASE: loansdb
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+  cardsdb:
+    container_name: cardsdb
+    ports:
+      - 3310:3306
+
+    environment:
+
+      MYSQL_DATABASE: cardsdb
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
+
+
   rabbit:
     image: rabbitmq:4-management
     hostname: rabbitmq
@@ -18,7 +52,7 @@ services:
   configserver:
     environment:
       SPRING_CLOUD_CONFIG_SERVER_GIT_PASSWORD: ${SPRING_CLOUD_CONFIG_SERVER_GIT_PASSWORD}
-    image: "disha395/configserver:s6"
+    image: "disha395/configserver:s7"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -36,43 +70,55 @@ services:
       service: microservice-base-config
 
   accounts:
-    image: "disha395/accounts:s6"
+    image: "disha395/accounts:s7"
     container_name: accounts-ms
     ports:
       - "8080:8080"
     depends_on:
+      accountsdb:
+        condition: service_healthy
       configserver:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "accounts"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3308/accountsdb"
     extends:
       file: common-config.yml
       service: microservice-configserver-config
 
   loans:
-    image: "disha395/loans:s6"
+    image: "disha395/loans:s7"
     container_name: loans-ms
     ports:
       - "8090:8090"
     depends_on:
+      loansdb:
+        condition: service_healthy
       configserver:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "loans"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3309/loansdb"
+
+
     extends:
       file: common-config.yml
       service: microservice-configserver-config
 
   cards:
-    image: "disha395/cards:s6"
+    image: "disha395/cards:s7"
     container_name: cards-ms
     ports:
       - "9000:9000"
     depends_on:
+      cardsdb:
+        condition: service_healthy
       configserver:
         condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "cards"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3310/cardsdb"
+
     extends:
       file: common-config.yml
       service: microservice-configserver-config
