--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -9,16 +9,16 @@ spring:
         git:
           uri: "https://github.com/Disha395/config-files.git"
           username: Disha395
-          password: ${SPRING_CLOUD_CONFIG_SERVER_GIT_PASSWORD}
+#          password: ${SPRING_CLOUD_CONFIG_SERVER_GIT_PASSWORD}
           default-label: main
           timeout: 5
           clone-on-start: true
           force-pull: true
-  rabbitmq:
-    host: "localhost"
-    port: 5672
-    username: "guest"
-    password: "guest"
+#  rabbitmq:
+#    host: "localhost"
+#    port: 5672
+#    username: "guest"
+#    password: "guest"
 
 management:
   endpoints:
@@ -34,6 +34,9 @@ management:
     health:
       probes:
         enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
 
 encrypt:
   key: "YFURV8GYIG94B29GBRIWUBV9GEQGH9OEU"
